error page img wrapper image spacing fixed

--- a/src/scss/layout/_error.scss
+++ b/src/scss/layout/_error.scss
@@ -1,6 +1,5 @@
 .error {
   &__img-wrapper {
-    margin-bottom: 85px;
     @include max(767px) {
       margin-bottom: 30px;
     }
